--- a/src/view/detail.html
+++ b/src/view/detail.html
@@ -9,10 +9,33 @@
     <link rel="stylesheet" href="/css/detail.css">
     <script src="/lib/require.js" data-main="/js/detail.js"></script>
 </head>
-
 <body>
     @include('head.html', { isShow: true })
     @include('banner.html')
+    <div id="detail">
+        <!-- 
+        <div class="l detail-img-container">
+            <img src="https://res0.vmallres.com/pimages//product/6901443331109/428_428_9DF9BF94A5C5575108AF27F42DEEA8415F70E58F97882DEDmp.png" alt="">
+            <span></span>
+        </div>
+        <div class="detail-bigImg-container">
+            <img src="" alt="">
+        </div>
+        <div class="l detail-artical">
+            <h2>华为</h2>
+            <p>价格<span>￥4988.00</span></p>
+            <p>选择颜色<span class="active">皓月银</span><span>深空灰</span></p>
+            <div class="container">
+                <div class="container-num l">
+                    <input type="text" class="l" value="1"><button class="l add">+</button><button class="l sub">-</button>
+                </div>
+                <button class="l shopping-car">加入购物车</button>
+                <button class="l order"><a href="/view/cart.html" target="_blank">立即下单</a></button>
+            </div>
+        </div> -->
+
+    </div>
+
     @include('foot.html')
 </body>
 
