--- a/src/view/index.html
+++ b/src/view/index.html
@@ -11,6 +11,23 @@
 </head>
 <body>
     @include('head.html',{isShow:true})
+    <nav>
+        <div class="w">
+            <div class="fir">
+                <span class="l"><img class="l" src="/static/img/vmall_logo.png" alt=""></span>
+                <ul>
+                    <li class="l"><a href="">华为专区</a></li>
+                    <li class="l"><a href="">鸿蒙智联</a></li>
+                    <li class="l"><a href="">莫塞尔</a></li>
+                    <li class="l"><a href="">华为智选</a></li>
+                    <li class="l"><a href="">HarmonyOS</a></li>
+                    <li class="l"><a href="">特惠企采</a></li>
+                    <li class="l"><a href="">教育商店</a></li>
+                </ul>
+                <span class="iconfont r"><a href="">&#xe62f;</a></span>
+            </div>
+        </div>
+    </nav>
     @include('banner.html')
     <main>
         <div class="w">
