--- a/src/css/detail.scss
+++ b/src/css/detail.scss
@@ -1,4 +1,105 @@
-@import '/modules/common.scss';
-@import '/modules/head.scss';
-@import '/modules/foot.scss';
-@import '/modules/banner.scss';
+@import './modules/common.scss';
+@import './modules/head.scss';
+@import './modules/foot.scss';
+@import './modules/banner.scss';
+
+#detail{
+    height: 700px;
+    width: 1000px;
+    margin: 40px auto;
+    position: relative;
+    .detail-img-container{
+        width: 450px;
+        height: 450px;
+        margin-right: 20px;
+        position: relative;
+        text-align: center;
+        img{
+            height: 100%;
+        }
+        span{
+            content: "";
+            display: none;
+            width: 200px;
+            height: 200px;
+            background-color: rgba($color: rgb(216, 71, 71), $alpha: .3);
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    }
+    .detail-bigImg-container{
+        display: none;
+        overflow: hidden;
+        position: absolute;
+        width: 400px;
+        height: 400px;
+        left: 420px;
+        img{
+            height: 600px;
+            position: absolute;
+        }
+    }
+    .detail-artical{
+        margin-top: 80px;
+        h2{
+            height: 32px;
+            font-size: 21px;
+        }
+        p{
+            vertical-align: center;
+            &:nth-of-type(1){
+                margin: 30px 0 10px;
+                font-size: 17px;
+                span{
+                        color: #CF0A2C;
+                        font-size: 26px;
+                }
+            }
+            &:nth-of-type(2){
+                height: 70px;
+                line-height: 70px;
+                font-size: 17px;
+                margin-bottom: 20px;
+                span{
+                    margin-right: 20px;
+                    &:nth-of-type(1){
+                        margin-left: 20px;
+                    }
+                }
+                .active{
+                    border:  2px solid #CF0A2C;
+                }
+            }
+        }
+        .container{
+            height: 50px;
+            width: 300px;
+            overflow: hidden;
+            &-num{
+                width: 62px;
+                height: 42px;
+                input{
+                    width: 40px;
+                    height: 40px;
+                    border: 1px solid #ccc;
+                    text-align: center;
+                }
+                button{
+                    width: 20px;
+                    height: 20px;
+                }
+            }
+            &>button{
+                margin: 10px 20px 0;
+                &:nth-of-type(1){
+                    background-color: rgb(207, 138, 10);
+                }
+                &:nth-of-type(2){
+                    background-color: #CF0A2C;
+                }
+            }
+        }
+    }
+}
+
