--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,7 +1,49 @@
-@import '/modules/common.scss';
-@import '/modules/head.scss';
-@import '/modules/foot.scss';
-@import '/modules/banner.scss';
+@import './modules/common.scss';
+@import './modules/head.scss';
+@import './modules/foot.scss';
+@import './modules/banner.scss';
+
+nav{
+    width: 100%;
+    height: 50px;
+    .w{
+        span{
+            display: inline-block;
+            line-height: 50px;
+            &:nth-of-type(1){
+                width: 200px;
+                margin-right: 100px;
+                img{
+                    margin-top: 10px;
+                    height: 30px;
+                }
+            }
+            &:nth-of-type(2){
+                a{
+                    font-size: 23px;
+                }
+            }
+        }
+        ul{
+            li{
+                line-height: 50px;
+                font-size: 20px;
+                margin-right: 20px;
+                a{
+                    color: rgba(0, 0, 0, 0.685);
+                }
+                &:hover{
+                    a{
+                        color: #CF0A2C;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
 
 main{
     background-color: #ccc;
