--- a/src/css/modules/common.scss
+++ b/src/css/modules/common.scss
@@ -3,7 +3,7 @@ ul,ol{list-style: none;}
 img{border: 0;}
 input{outline: none;border: none;}
 
-body{color: #00000080;font-size: 13px;font-family: "微软雅黑";/* overflow-x: hidden; */}
+body{color: #00000080;font-size: 13px;font-family: "微软雅黑";}
 
 a{text-decoration: none;color: #3e3e3e;}
 a:hover{color: #CF0A2C;}
@@ -12,8 +12,14 @@ a:hover{color: #CF0A2C;}
 .l{float: left;}
 .r{float: right;}
 
-@mixin prb {
-    position: absolute;
-    top: 36px;
-    left: 0;
+
+@font-face {
+    font-family: 'iconfont';
+    src: url('../static/icon/font/iconfont.ttf?t=1642658059551') format('truetype');
+}
+.iconfont {
+    font-family: "iconfont" !important;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
