--- a/src/view/modules/head.html
+++ b/src/view/modules/head.html
@@ -7,7 +7,7 @@
       <li class="l"><a href="">V码(优购码)</a></li>
       <li class="l"><a href="">企业购</a></li>
       <li class="l"><a href="">Select Region</a></li>
-      <li class="l">
+      <li class="l tagLi">
         <a href="">更多精彩</a>
         <ul class="tag">
           <li><a href="">HarmonyOS</a></li>
@@ -17,21 +17,20 @@
         </ul>
       </li>
     </ul>
-
     
     <ul class="l">
       <li class="l"><a href="">请登录 注册</a></li>
       <li class="l"><a href="">我的订单</a></li>
-      <li class="l">
+      <li class="l tagLi">
         <a href="">客服</a>
         <ul class="tag">
           <li><a href="">服务中心</a></li>
           <li><a href="">练习客服</a></li>
         </ul>
       </li>
-      <li class="l">
+      <li class="l tagLi">
         <a href="">网站导航</a>
-        <ul class="tag">
+        <ul class="tag tag-nav">
           <ul class="l">
             <li><a href="">商城首页</a></li>
           </ul>
@@ -43,27 +42,27 @@
             <li><a href="">HarmonyOS</a></li>
           </ul>
           <ul class="l">
-            <li><a href="">产品</a></li>
-            <li><a href="">手机</a></li>
-            <li><a href="">笔记本</a></li>
-            <li><a href="">平板</a></li>
-            <li><a href="">智能穿戴</a></li>
-            <li><a href="">智能家居</a></li>
-            <li><a href="">智慧屏</a></li>
-            <li><a href="">耳机音箱</a></li>
-            <li><a href="">热销配件</a></li>
-            <li><a href="">生态产品</a></li>
-            <li><a href="">增值服务</a></li>
+            <li class="l"><a href="">产品</a></li>
+            <li class="l"><a href="">手机</a></li>
+            <li class="l"><a href="">笔记本</a></li>
+            <li class="l"><a href="">平板</a></li>
+            <li class="l"><a href="">智能穿戴</a></li>
+            <li class="l"><a href="">智能家居</a></li>
+            <li class="l"><a href="">智慧屏</a></li>
+            <li class="l"><a href="">耳机音箱</a></li>
+            <li class="l"><a href="">热销配件</a></li>
+            <li class="l"><a href="">生态产品</a></li>
+            <li class="l"><a href="">增值服务</a></li>
           </ul>
           <ul class="l">
-            <li><a href="">增值服务</a></li>
-            <li><a href="">以旧换新</a></li>
-            <li><a href="">补购保障</a></li>
-            <li><a href="">一口价电池</a></li>
-            <li><a href="">音频延保</a></li>
-            <li><a href="">穿戴延保</a></li>
-            <li><a href="">智慧屏全质保</a></li>
-            <li><a href="">活动公告</a></li>
+            <li class="l"><a href="">增值服务</a></li>
+            <li class="l"><a href="">以旧换新</a></li>
+            <li class="l"><a href="">补购保障</a></li>
+            <li class="l"><a href="">一口价电池</a></li>
+            <li class="l"><a href="">音频延保</a></li>
+            <li class="l"><a href="">穿戴延保</a></li>
+            <li class="l"><a href="">智慧屏全质保</a></li>
+            <li class="l"><a href="">活动公告</a></li>
           </ul>
           <ul class="l">
             <li><a href="">会员</a></li>
@@ -71,7 +70,7 @@
           </ul>
         </ul>
       </li>
-      <li class="l">
+      <li class="l tagLi">
         <a href="">手机版</a>
         <ul class="tag">
           <li></li>
