--- a/src/view/index.html
+++ b/src/view/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/static/icon/iconfont.css">
+    <link rel="stylesheet" href="/static/icon/font/iconfont.css">
     <link rel="stylesheet" href="/css/index.css">
     <script src="/lib/require.js" data-main="/js/index.js"></script>
 </head>
@@ -24,7 +25,13 @@
                     <li class="l"><a href="">特惠企采</a></li>
                     <li class="l"><a href="">教育商店</a></li>
                 </ul>
-                <span class="iconfont r"><a href="">&#xe62f;</a></span>
+                <span class="iconfont r"><a href="javascript:;">&#xe62f;</a></span>
+            </div>
+            <div class="sec">
+                <span class="iconfont l"><a href="">&#xe62f;</a></span>
+                <input type="text" value="搜索商品" class="l input">
+                <span class="l del"><a href="javascript:;">×</a></span>
+                <ul></ul>
             </div>
         </div>
     </nav>
