--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -7,35 +7,93 @@ nav{
     width: 100%;
     height: 50px;
     .w{
-        span{
-            display: inline-block;
-            line-height: 50px;
-            &:nth-of-type(1){
-                width: 200px;
-                margin-right: 100px;
-                img{
-                    margin-top: 10px;
-                    height: 30px;
+        height: 50px;
+        position: relative;
+        .fir{
+            /* display: none; */
+            span{
+                display: inline-block;
+                line-height: 50px;
+                &:nth-of-type(1){
+                    width: 200px;
+                    margin-right: 100px;
+                    img{
+                        margin-top: 10px;
+                        height: 30px;
+                    }
+                }
+                &:nth-of-type(2){
+                    a{
+                        font-size: 23px;
+                    }
                 }
             }
-            &:nth-of-type(2){
-                a{
-                    font-size: 23px;
+            ul{
+                li{
+                    line-height: 50px;
+                    font-size: 20px;
+                    margin-right: 20px;
+                    a{
+                        color: rgba(0, 0, 0, 0.685);
+                    }
+                    &:hover{
+                        a{
+                            color: #CF0A2C;
+                        }
+                    }
                 }
             }
         }
-        ul{
-            li{
-                line-height: 50px;
+        .sec{
+            display: none;
+            opacity: 0;
+            width: 532px;
+            /* margin: auto; */
+            height: 32px;
+            border: 1px solid #ccc;
+            border-radius: 20px;
+            /* border-top-left-radius: 20px;
+            border-top-right-radius: 20px; */
+            position: absolute;
+            top: 50%;
+            margin-top: -16px;
+            /* left: 50%;
+            margin-left: -266px; */
+            left: 999px;
+            span{
+                width: 40px;
+                height: 30px;
+                line-height: 30px;
+                text-align: center;
                 font-size: 20px;
-                margin-right: 20px;
-                a{
-                    color: rgba(0, 0, 0, 0.685);
-                }
                 &:hover{
                     a{
-                        color: #CF0A2C;
+                        color: black;
                     }
+                }
+            }
+            input{
+                width: 450px;
+                height: 30px;
+                color: #ccc;
+            }
+            ul{
+                display: none;
+                position: absolute;
+                top: 32px;
+                width: 531px;
+                height: 200px;
+                background-color: #fff;
+                z-index: 30;
+                border: 1px solid #ccc;
+                border-bottom-left-radius: 20px;
+                border-bottom-right-radius: 20px;
+                li{
+                    width: 530px;
+                    height: 50px;
+                    line-height: 50px;
+                    font-size: 20px;
+                    text-indent: 50px;
                 }
             }
         }
